fix header z-index

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -10,6 +10,7 @@
  width: $header-width;
  height: $header-height;
  padding: 10px 20px;
+ z-index: 1000000;
  @include menu-color;
 
  &__navigation {
